--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGODB_URI="mongodb://localhost:27017"
+MONGODB_URI="mongodb+srv://notes-app:nabinmaity2005@cluster0.zgd0x.mongodb.net/"
